# new_admin_panel_sprint_1

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
movies_admin/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  run_uwsgi.sh  uwsgi.ini
movies_admin/config/: .env_example  asgi.py  settings.py  urls.py  wsgi.py
movies_admin/config/components/: database.py  installed_apps.py  logging.py  middleware.py
movies_admin/movies/: admin.py  apps.py  mixin.py  models.py
movies_admin/movies/api/: urls.py
movies_admin/movies/api/v1/: urls.py  views.py
movies_admin/movies/locale/en/LC_MESSAGES/: django.po
movies_admin/movies/locale/ru/LC_MESSAGES/: django.po
movies_admin/movies/migrations/: 0001_initial.py  0002_filmwork_certificate_filmwork_file_path.py  0002_rename_created_filmwork_created_at_and_more.py  0003_alter_filmwork_options_alter_genre_options_and_more.py
movies_admin/src/: nginx.conf  site.conf
schema_design/: movies_database.ddl
sqlite_to_postgres/: .env_example  README.md  from_sqlite.py  load_data.py  main.py  models.py  postgres_service.py  settings.py  sqlite_service.py  to_postgres.py
sqlite_to_postgres/tests/: check_consistency.py
