[tool.poetry]
name = "new-admin-panel-sprint-1-git"
version = "0.1.0"
description = ""
authors = ["Татьяна Смирнова"]
readme = "README.md"
packages = [{include = "new_admin_panel_sprint_1"}]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.1"
django = "4.2.11"
psycopg2-binary = "^2.9.9"
split-settings = "^1.0.0"
django-debug-toolbar = "^4.3.0"
more-itertools = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
